--- a/respo/config-client-bus-dev.properties
+++ b/respo/config-client-bus-dev.properties
@@ -1,2 +1,3 @@
-foo.bus = foo.bus version 4
+#注：此配置文件名必须和相应的项目服务名对应，如本文件对应的项目为 spring.application.name=config-client-bus
+foo.bus = foo.bus version 5
 democonfigclient.message=hello spring io
